objects/StandardLineItem__c.object
<CustomObject>
    <description>This is a generic line item to be used when the ordering process doesn&apos;t use the quoting process but still needs to create sales orders in Oracle.</description>
    <fields>
        <fullName>Item_Description__c</fullName>
        <formula>Item__r.Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Item__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Item__c.Line_Type__c</field>
                <operation>equals</operation>
                <value>Standard Line</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Item__c</referenceTo>
        <relationshipLabel>Standard Line Items</relationshipLabel>
        <relationshipName>Standard_Line_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residential Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Residential_Project__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>New Home</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Residential_Project__c</referenceTo>
        <relationshipLabel>Standard Line Items</relationshipLabel>
        <relationshipName>Standard_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Standard Line Item</label>
    <nameField>
        <displayFormat>SLI-{0}</displayFormat>
        <label>Standard Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>